Changes in 2.01
---------------

General

 * Modified a few things that required Perl 5.005, so it now runs
   under 5.004.

 * Calculate separate checksums for the patch data and the whole patch
   file. Do not complain if the checksum for the patch file is wrong,
   if the checksum for the patch data is okay.
   This allows modification of the preamble of the patch file without
   affecting the integrity checking mechanism.

 * Restructured the files in the kit, and added a test program.

 * A warning is given when installing on Solaris, since the 'patch'
   program on Solaris (at least the versions I have access to) is
   buggy to the extent that it is unusable.

 * Small fixes to avoid warnings under Perl 5.8.x and later.

Makepatch

 * Some systems need to set environment variable TMPDIR (or TEMP) to
   designate a location for temporary files.

Overall changes in makepatch version 2.0
----------------------------------------

General

 * The makepatch package now consists of two programs: 'makepatch' and
   'applypatch'. 'makepatch' generates the patch kit (using the 'diff'
   program), 'applypatch' applies it (using the 'patch' program).

Makepatch

 * To avoid most common problems with buggy versions of the 'patch'
   program, the patch data is relocated to the current directory. 
   This obsoletes the command line options -fixpath and -fixallpath.

   As a consequence, when a patch is generated from two directories,
   e.g.:

     makepatch src-1.0 src-1.1 > the-patch

   it must be applied *IN* the directory src-1.0, e.g.

     cd src-1.0; applypatch the-patch

   When fed to patch directly, no -p option should be used:

     cd src-1.0; patch < the-patch

 * (Initial) program options can be specified in environment variable
   MAKEPATCHINIT, and in preferences files /etc/makepatchrc,
   $HOME/.makepatchrc and ./.makepatchrc. The latter file name can be
   overridden with a '-rcfile' option in MAKEPATCHINIT.
