@@ -4,8 +4,8 @@ my $RCS_Id = '$Id: applypatch.pl,v 1.17 2001-04-08 11:00:00+02 jv Exp jv $ ';
 # Author          : Johan Vromans
 # Created On      : Sat Nov 14 14:34:28 1998
 # Last Modified By: Johan Vromans
-# Last Modified On: Thu Nov 22 10:00:23 2001
-# Update Count    : 134
+# Last Modified On: Wed Mar 24 19:24:28 2004
+# Update Count    : 136
 # Status          : Released
 #
 
@@ -13,7 +13,7 @@ use strict;
 use Getopt::Long 2.00;
 use File::Basename;
 use File::Spec;
-use IO;
+use IO::File;
 use Text::ParseWords;
 #use Diff;
 #use Patch;
@@ -22,7 +22,7 @@ use Text::ParseWords;
 
 my $my_package = 'Sciurix';
 my $my_name    = "applypatch";
-my $my_version = "2.00_07";
+my $my_version = "2.00_08";
 my $data_version = '1.0';
 
 $my_version .= '*' if length('$Locker: jv $ ') > 12;
@@ -389,6 +389,7 @@ sub execute_patch () {
     my $p = new IO::File;
     print STDERR ("+ $patch\n") if $trace;
     $p->open("|$patch") || die ("Cannot open pipe to \"$patch\": $!\n");
+    binmode($p);
     if ( $applypatch ) {
 	my $lines = 0;
 	while ( <$tmpfile> ) {
